package com.daw.cinemadaw.domain.cinema;

public enum OrderStatus {
    PENDING, CONFIRMED, CANCELLED
}
