package com.daw.cinemadaw.domain.cinema.User;

public enum Role {
    
    ADMIN,
    CLIENT
}
